--- a/project-part-c/src/main/resources/readIn.fxml
+++ b/project-part-c/src/main/resources/readIn.fxml
@@ -31,7 +31,7 @@
                       <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" text="nodeID" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <Label fx:id="nodeIDLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" text="nodeID" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <font>
                               <Font size="20.0" />
                            </font>
