--- a/project-part-c/src/main/resources/editNode.fxml
+++ b/project-part-c/src/main/resources/editNode.fxml
@@ -76,5 +76,6 @@
       </Label>
       <Button fx:id="cancelButton" layoutX="200.0" layoutY="550.0" mnemonicParsing="false" onAction="#setCancelButton" prefWidth="100.0" text="Cancel" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="800.0" />
       <Button fx:id="saveButton" defaultButton="true" disable="true" layoutX="563.0" layoutY="550.0" mnemonicParsing="false" onAction="#setSaveButton" prefWidth="100.0" text="Save" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="800.0" AnchorPane.rightAnchor="100.0" />
+      <Button fx:id="removeButton" layoutX="573.0" layoutY="755.0" mnemonicParsing="false" onAction="#setRemoveButton" text="Remove" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" />
    </children>
 </AnchorPane>
