--- a/project-part-c/src/main/resources/editNode.fxml
+++ b/project-part-c/src/main/resources/editNode.fxml
@@ -9,12 +9,12 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="editNodeController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="editNodeController">
    <children>
       <GridPane layoutX="300.0" layoutY="151.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="80.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -74,8 +74,20 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Button fx:id="cancelButton" layoutX="200.0" layoutY="550.0" mnemonicParsing="false" onAction="#setCancelButton" prefWidth="100.0" text="Cancel" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="800.0" />
-      <Button fx:id="saveButton" defaultButton="true" disable="true" layoutX="563.0" layoutY="550.0" mnemonicParsing="false" onAction="#setSaveButton" prefWidth="100.0" text="Save" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="800.0" AnchorPane.rightAnchor="100.0" />
-      <Button fx:id="removeButton" layoutX="573.0" layoutY="755.0" mnemonicParsing="false" onAction="#setRemoveButton" text="Remove" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" />
+      <GridPane layoutX="80.0" layoutY="340.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#setCancelButton" text="Cancel" GridPane.halignment="CENTER" />
+            <Button fx:id="removeButton" alignment="CENTER" mnemonicParsing="false" onAction="#setRemoveButton" text="Remove" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+            <Button fx:id="saveButton" defaultButton="true" disable="true" mnemonicParsing="false" onAction="#setSaveButton" text="Save" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
