--- a/project-part-c/src/main/resources/readIn.fxml
+++ b/project-part-c/src/main/resources/readIn.fxml
@@ -11,11 +11,11 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="readInController">
    <children>
-      <ScrollPane layoutX="14.0" layoutY="81.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="80.0">
+      <ScrollPane fitToWidth="true" layoutX="14.0" layoutY="81.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="80.0">
         <content>
-          <AnchorPane fx:id="databaseAnchor" minHeight="0.0" minWidth="0.0">
+          <AnchorPane fx:id="databaseAnchor">
                <children>
-                  <GridPane fx:id="databaseGrid" gridLinesVisible="true" layoutY="7.0" maxHeight="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="0.0">
+                  <GridPane fx:id="databaseGrid" gridLinesVisible="true" layoutY="7.0" maxHeight="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="11.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="11.0" />
