--- a/project-part-c/src/main/resources/download.fxml
+++ b/project-part-c/src/main/resources/download.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="downloadController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DownloadController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="585.0" layoutY="34.0" text="Download CSV" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
          <font>
