--- a/Project/src/main/resources/backgroud.css
+++ b/Project/src/main/resources/backgroud.css
@@ -1,20 +1,23 @@
 
  .body-background {
-//   background-image: linear-gradient(56deg, #1200c3, #8441b5, #bc77a5, #eaae90)
+    //  -fx-background-image: linear-gradient(56deg, #1200c3, #8441b5, #bc77a5, #eaae90)
 }
-.jfx-button {
-    -jfx-button-type: FLAT;
-    -fx-background-color: white;
-    -fx-text-fill: black;
-}
+
 
 /*Raised button example */
 .jfx-button {
     -jfx-button-type: RAISED;
     -fx-background-color:#ebaecd;
+    -fx-font-weight: bold;
     -fx-text-fill: white;
 }
-
+ .jfx-button2 {
+     -jfx-button-type: RAISED;
+     -fx-background-color:#ebaecd;
+     -fx-font-size: 20;
+     -fx-font-weight: bold italic;
+     -fx-text-fill: white;
+ }
 /* Tab pane styling*/
 .tab-pane{
     -fx-background-color: #bc77a5;
@@ -39,6 +42,7 @@
  .menu{
      -fx-text-fill: white;
  }
+
 
 
 
