--- a/Project/src/main/resources/admin_tools_main.fxml
+++ b/Project/src/main/resources/admin_tools_main.fxml
@@ -16,7 +16,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerATM">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="bodybackground" stylesheets="@backgroud.css">
+      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="bodybackground" stylesheets="@background.css">
          <children>
             <ImageView pickOnBounds="true" preserveRatio="true">
                <image>
@@ -25,7 +25,7 @@
             </ImageView>
             <BorderPane>
                <top>
-                  <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@backgroud.css" BorderPane.alignment="CENTER">
+                  <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@background.css" BorderPane.alignment="CENTER">
                     <menus>
                       <Menu mnemonicParsing="false" text="Back">
                         <items>
