--- a/Project/src/main/resources/basic_main_menu_main.fxml
+++ b/Project/src/main/resources/basic_main_menu_main.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerMMM">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/backgroud.css">
+      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/background.css">
          <children>
             <ImageView pickOnBounds="true" preserveRatio="true">
                <image>
@@ -22,7 +22,7 @@
             </ImageView>
             <BorderPane>
                <top>
-                  <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@backgroud.css" BorderPane.alignment="CENTER">
+                  <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@background.css" BorderPane.alignment="CENTER">
                     <menus>
                       <Menu mnemonicParsing="false" text="Back">
                         <items>
@@ -33,22 +33,22 @@
                   </MenuBar>
                </top>
             </BorderPane>
-            <JFXButton buttonType="RAISED" layoutX="148.0" layoutY="242.0" maxHeight="40.0" prefHeight="40.0" prefWidth="305.0" styleClass="jfx-button2" stylesheets="@backgroud.css" text="View Reservation" textFill="WHITE">
+            <JFXButton buttonType="RAISED" layoutX="148.0" layoutY="242.0" maxHeight="40.0" prefHeight="40.0" prefWidth="305.0" styleClass="jfx-button2" stylesheets="@background.css" text="View Reservation" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="148.0" layoutY="305.0" maxHeight="40.0" prefHeight="40.0" prefWidth="305.0" styleClass="jfx-button2" stylesheets="@backgroud.css" text="Service Request" textFill="WHITE">
+            <JFXButton buttonType="RAISED" layoutX="148.0" layoutY="305.0" maxHeight="40.0" prefHeight="40.0" prefWidth="305.0" styleClass="jfx-button2" stylesheets="@background.css" text="Service Request" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="148.0" layoutY="177.0" maxHeight="40.0" prefHeight="40.0" prefWidth="305.0" styleClass="jfx-button2" stylesheets="@backgroud.css" text="Reserve a Room" textFill="WHITE">
+            <JFXButton buttonType="RAISED" layoutX="148.0" layoutY="177.0" maxHeight="40.0" prefHeight="40.0" prefWidth="305.0" styleClass="jfx-button2" stylesheets="@background.css" text="Reserve a Room" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="148.0" layoutY="114.0" maxHeight="40.0" prefHeight="40.0" prefWidth="305.0" style="-fx-background-color: #ebaecd;" styleClass="jfx-button2" stylesheets="@backgroud.css" text="Find Your Path" />
+            <JFXButton buttonType="RAISED" layoutX="148.0" layoutY="114.0" maxHeight="40.0" prefHeight="40.0" prefWidth="305.0" style="-fx-background-color: #ebaecd;" styleClass="jfx-button2" stylesheets="@background.css" text="Find Your Path" />
             <Text fill="WHITE" layoutX="181.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Home">
                <font>
                   <Font name="System Bold" size="40.0" />
