choice boxes work, added fxml to UIController, added choice box init

--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -49,7 +49,7 @@
                                     <Insets left="25.0" top="30.0" />
                                  </VBox.margin>
                               </Text>
-                              <ChoiceBox prefWidth="150.0">
+                              <ChoiceBox fx:id="initialLocationSelect" onAction="#initLocChanged" prefWidth="150.0">
                                  <VBox.margin>
                                     <Insets left="25.0" />
                                  </VBox.margin>
