--- a/Project/src/main/resources/admin_tools_view_edges.fxml
+++ b/Project/src/main/resources/admin_tools_view_edges.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerATVE">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerATVE">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/backgroud.css">
+      <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="body-background" stylesheets="/backgroud.css">
          <children>
-            <ImageView opacity="0.6" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitWidth="900.0" opacity="0.6" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@purple-orange-gradient.jpg" />
                </image>
@@ -28,7 +28,7 @@
             </ImageView>
             <BorderPane>
                <top>
-                  <MenuBar blendMode="MULTIPLY" nodeOrientation="LEFT_TO_RIGHT" prefWidth="600.0" style="-fx-background-color: #F6B6E2;" styleClass="menu" stylesheets="@backgroud.css" BorderPane.alignment="CENTER">
+                  <MenuBar blendMode="MULTIPLY" nodeOrientation="LEFT_TO_RIGHT" prefWidth="900.0" style="-fx-background-color: #F6B6E2;" styleClass="menu" stylesheets="@backgroud.css" BorderPane.alignment="CENTER">
                     <menus>
                       <Menu mnemonicParsing="false" text="Back">
                         <items>
@@ -47,19 +47,19 @@
                   </MenuBar>
                </top>
                <center>
-                  <TableView fx:id="edgeTable" maxWidth="570.0" prefHeight="320.0" prefWidth="570.0" BorderPane.alignment="CENTER">
+                  <TableView fx:id="edgeTable" maxWidth="800.0" prefHeight="490.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                     <columns>
-                      <TableColumn prefWidth="100.0" text="EdgeID" />
-                      <TableColumn prefWidth="170.0" text="StartNode" />
-                        <TableColumn prefWidth="170.0" text="EndNode" />
-                        <TableColumn prefWidth="129.0" text="Remove" />
+                      <TableColumn prefWidth="200.0" text="EdgeID" />
+                      <TableColumn prefWidth="200.0" text="StartNode" />
+                        <TableColumn prefWidth="200.0" text="EndNode" />
+                        <TableColumn prefWidth="200.0" text="Remove" />
                     </columns>
                   </TableView>
                </center>
             </BorderPane>
-            <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="506.0" layoutY="357.0" stylesheets="@backgroud.css" text="Add Node">
+            <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="774.0" layoutY="535.0" style="-fx-background-color: #ebaecd;" stylesheets="@backgroud.css" text="Add Node" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </JFXButton>
          </children>
