--- a/Project/src/main/resources/guest_main_menu_main.fxml
+++ b/Project/src/main/resources/guest_main_menu_main.fxml
@@ -11,18 +11,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerMMM">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerMMM">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/backgroud.css">
+      <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="body-background" stylesheets="/backgroud.css">
          <children>
-            <ImageView pickOnBounds="true" preserveRatio="true">
+            <ImageView fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@purple-orange-gradient.jpg" />
                </image>
             </ImageView>
             <BorderPane>
                <top>
-                  <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@backgroud.css" BorderPane.alignment="CENTER">
+                  <MenuBar blendMode="ADD" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@backgroud.css" BorderPane.alignment="CENTER">
                     <menus>
                       <Menu mnemonicParsing="false" text="Back">
                         <items>
@@ -33,19 +33,19 @@
                   </MenuBar>
                </top>
             </BorderPane>
-            <JFXButton buttonType="RAISED" layoutX="176.0" layoutY="143.0" style="-fx-background-color: #ebaecd;" text="Find Your Path" textFill="WHITE">
+            <JFXButton buttonType="RAISED" layoutX="301.0" layoutY="235.0" prefWidth="300.0" style="-fx-background-color: #ebaecd;" text="Find Your Path" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="30.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="173.0" layoutY="240.0" style="-fx-background-color: #ebaecd;" stylesheets="@backgroud.css" text="Service Request" textFill="WHITE">
+            <JFXButton buttonType="RAISED" layoutX="301.0" layoutY="353.0" prefWidth="300.0" style="-fx-background-color: #ebaecd;" stylesheets="@backgroud.css" text="Service Request" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="30.0" />
                </font>
             </JFXButton>
-            <Text fill="WHITE" layoutX="223.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, Guest">
+            <Text fill="WHITE" layoutX="344.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, Guest">
                <font>
-                  <Font name="System Bold" size="36.0" />
+                  <Font name="System Bold" size="50.0" />
                </font>
             </Text>
          </children>
