--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -15,9 +15,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" scaleShape="false" styleClass="body-background" stylesheets="/background.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerPFM">
+<AnchorPane fx:id="parentAnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" scaleShape="false" styleClass="body-background" stylesheets="/background.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerPFM">
    <children>
-      <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true">
+      <ImageView fx:id="leftImage" fitHeight="600.0" fitWidth="900.0" pickOnBounds="true">
          <image>
             <Image url="@purple-orange-gradient.jpg" />
          </image>
@@ -38,8 +38,8 @@
                <children>
                   <StackPane prefHeight="150.0" prefWidth="200.0">
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="200.0" opacity="0.3" stroke="TRANSPARENT" strokeType="INSIDE" width="200.0" StackPane.alignment="TOP_CENTER" />
-                        <VBox prefHeight="375.0" prefWidth="200.0" stylesheets="@background.css">
+                        <Rectangle fx:id="rectangleLeft" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="200.0" opacity="0.3" stroke="TRANSPARENT" strokeType="INSIDE" width="200.0" StackPane.alignment="TOP_CENTER" />
+                        <VBox fx:id="leftVBox" prefHeight="375.0" prefWidth="200.0" stylesheets="@background.css">
                            <children>
                               <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Initial Location" textAlignment="CENTER">
                                  <font>
@@ -62,7 +62,7 @@
                                     <Insets left="25.0" top="30.0" />
                                  </VBox.margin>
                               </Text>
-                              <ChoiceBox prefWidth="150.0">
+                              <ChoiceBox fx:id="destinationSelect" onAction="#destLocChanged" prefWidth="150.0">
                                  <VBox.margin>
                                     <Insets left="25.0" />
                                  </VBox.margin>
