--- a/Project/src/main/resources/login_main.fxml
+++ b/Project/src/main/resources/login_main.fxml
@@ -43,6 +43,11 @@
                                           <Font name="System Bold Italic" size="14.0" />
                                        </font>
                                     </JFXButton>
+                                    <JFXButton fx:id="loginAsGuestButton1" layoutX="280.0" layoutY="267.0" text="Login">
+                                       <font>
+                                          <Font name="System Bold Italic" size="14.0" />
+                                       </font>
+                                    </JFXButton>
                                  </children></AnchorPane>
                           </content>
                         </Tab>
