--- a/Project/src/main/resources/service_request_main.fxml
+++ b/Project/src/main/resources/service_request_main.fxml
@@ -80,7 +80,7 @@
                   <Font name="System Bold Italic" size="16.0" />
                </font>
             </Text>
-            <JFXButton fx:id="sendServiceRequestButton" buttonType="RAISED" style="-fx-background-color: #ebaecd;" text="Confirm" textFill="WHITE" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="555.0">
+            <JFXButton fx:id="confirmButton" buttonType="RAISED" onAction="#setConfirmButton" style="-fx-background-color: #ebaecd;" text="Confirm" textFill="WHITE" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="555.0">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
